<resources>
    <string name="app_name">MyRoboJackets Attendance</string>
    <string name="action_settings">Settings</string>

    <string name="card_detected">Card Detected:</string>
    <string name="card_data">Card Data:</string>
    <string name="UNKNOWN_TAG">Unknown Tag. Please present card again.</string>
    <string name="UNSUPPORTED_TAG">Unsupported Tag. Only BuzzCards are supported.</string>

    <string name="field_attendableId_text">ID</string>
    <string name="button_save_text">Save</string>
    <string name="button_upload_text">Upload</string>
    <string name="button_clear_text">Clear</string>
    <string name="button_export_text">Export</string>

    <string name="heading_buzzcard_scan_history">BuzzCard Scan History</string>

    <string name="field_attendableType_prompt">Select Attendable Type</string>
    <string-array name="field_attendableType_entries">
        <item>Event</item>
        <item>Team</item>
    </string-array>
</resources>
